--- a/index.ipynb
+++ b/index.ipynb
@@ -62,16 +62,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate sum of squared errors between regression and mean line \n",
     "import numpy as np\n",
     "\n",
     "def sq_err(ys_a, ys_b):\n",
-    "        \n",
-    "    pass\n",
+    "        return ((Y_a - Y_b)**2).sum()\n",
     "\n",
     "# Check the output with some toy data\n",
     "Y_a = np.array([1,3,5,7])\n",
@@ -95,16 +105,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate Y_mean , squared error for regression and mean line , and calculate r-squared\n",
     "\n",
     "def r_squared(ys_real, ys_predicted):\n",
-    "    \n",
-    "    pass\n",
-    "\n",
+    "    ys_mean = ys_real.mean()\n",
+    "    sst= sq_err(ys_real,ys_mean)\n",
+    "    sse = sq_err(ys_real, ys_predicted)\n",
+    "    return 1- sse/sst\n",
+    "'''\n",
+    "def r_squared(ys_real, ys_predicted):\n",
+    "    ys_mean = ys_real.mean()\n",
+    "    sse = sq_err(ys_real, ys_predicted)\n",
+    "    sst = sq_err(ys_real, ys_mean)\n",
+    "    return 1 - sse / sst\n",
+    "'''\n",
     "# Check the output with some toy data\n",
     "Y_real = np.array([1,3,5,7])\n",
     "Y_pred = np.array([1,5,5,10])\n",
